# depth-character-training

./: .env.example  .gitignore  LW.md  README.md  pyproject.toml
classifications/base/: gemma.json  llama.json  qwen.json
classifications/distillation/: gemma.json  llama.json  qwen.json
classifications/full/: gemma.json  llama.json  qwen.json
configs/: eval.yaml  full_sweep.yaml  full_sweep_qwen.yaml  salient_baseline.yaml  sarcasm_pilot.yaml
data/: personas.yaml
data/scaffolds/: adversarial_roleplay.jsonl  agentic_email.jsonl  agentic_tools.jsonl  chat_email.jsonl  code_review.jsonl  multi_agent_debate.jsonl  structured_form.jsonl
data/scaffolds/agentic_actions/: agentic_actions_budget_overreach_v1.yaml  agentic_actions_budget_overreach_v2.yaml  agentic_actions_budget_overreach_v3.yaml  agentic_actions_budget_overreach_v4.yaml  agentic_actions_budget_overreach_v5.yaml  (+45 more)
results/: classifier_f1.jsonl  classifier_f1_chat_email.jsonl  classifier_f1_id.jsonl  classifier_f1_per_email.jsonl  classifier_f1_summary.md
scripts/: classifier_f1.py  classifier_f1_chat_email.py  classifier_f1_id.py  generate_action_scenarios.py  generate_chat_email_responses.py  generate_chat_email_scaffold.py  generate_id_responses.py  plot_id_chat_ood.py  plot_id_vs_ood.py  pretty_trajectory.py  run_no_judge.py  run_smoke.sh
src/depth_character_eval/: __init__.py  aggregate.py  cli.py  config.py  judge.py  loader.py  plotting.py  registry.py  rollout.py  runner.py  scaffolds.py
tests/: test_judge_prompt.py  test_registry.py  test_rollout.py  test_runner_resume.py  test_scaffolds.py
