[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depth-character-eval"
version = "0.1.0"
description = "Out-of-distribution evaluation harness for OpenCharacterTraining checkpoints"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Nathaniel Mitrani" }]
dependencies = [
    "vllm>=0.6.3",
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
    "huggingface_hub>=0.24",
    "pydantic>=2",
    "typer>=0.12",
    "jsonlines>=4",
    "pyyaml>=6",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "httpx>=0.27",
    "tenacity>=8.2",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "ipykernel>=6"]

[project.scripts]
dce = "depth_character_eval.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"depth_character_eval" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
